sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:11: error: not found: value getVlaeur
      if(getValeur(i)>getVlaeur(i+1)){
                      ^